# pbdDEMO

./: .Rbuildignore  .gitignore  ChangeLog  DESCRIPTION  DESCRIPTION~  INSTALL  INSTALL.win.src  NAMESPACE  README  README.md  cleanup  configure  configure.ac  fixing
Benchmarks/: big_crossprod.r  cov.r  crossprod.r  lmfit.r  prcomp.r
R/: 000_globalVariables.r  control.r  dmat_filtering.R  dmat_generating_matrices.R  dmat_randmat.R  dmat_reader.R  dmat_verify.R  gbd_dmat.r  load_balance.r  mpi_example.r  ncvar_2d.r  pbdDEMO-package.r  plot_dmat.r  randmat.R  read_csv.r  read_sql_csv.R  spmd2dmat.r  spmd_dmat.r  task_pull.r  timer.R  verify.R
data/: TREFHT.rda  control.r  control.r~  datalist
demo/: 00Index  balance.r  binning.r  comparators.r  dist_iris.r  dist_pony.r  dmat_random.r~  galaxy.r  gbd_dmat.r  iris_dmat.r  iris_gbd.r  iris_overlap.r  iris_spmd.r  mcmc_galaxy.r  mcmc_rjags.r  monte_carlo.r  mpi_1.r  mpi_2.r  mpi_3.r  mpi_4.r  mpi_5.r  nc4_block_cyclic.r  nc4_dmat.r  nc4_gbdc.r  nc4_parallel.r  nc4_serial.r  ols.r  ols_dmat.r  pca.r  phyclust_bootstrap.r  quantile.r  randmat_diag_global.r  randmat_global.r  randmat_local.r  read_csv.r  read_ncdf.r  read_sql.r  reblock.r  sample_stat.r  sample_stat_dmat.r  (+10 more)
inst/: CITATION  CITATION~
man/: 00_pbdDEMO-package.Rd  01_control.Rd  05_timer.Rd  10_mpi.Rd  20_gbd_dmat.Rd  20_load.balance.Rd  20_spmd_dmat.Rd  21_balance.Rd  21_spmd2dmat.Rd  DEMO-Control.Rd  Temperature-at-Reference-Height.Rd  ca_dmat_readcsv.Rd  ca_dmat_readsql.Rd  cb_dmat_readcsv.Rd  cc_plot.Rd  da_verify.Rd  ea_examples.Rd  eb_nc4.Rd  ncvar.Rd  (+11 more)
(+160 files in other folders)
